Kubernetes/HW8/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata: 
      labels: 
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80 
        volumeMounts:
        - name: html-file
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: html-file
        configMap:
          name: nginx-configmap
