Kubernetes/HW8/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: net-svc
spec:
  selector:
    app: nginx
  ports:
  - name: nginx
    port: 80
    targetPort: 80
