Kubernetes/HW8/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-controller
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: only-my-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: net-svc
            port:
              number: 80
  tls:
  - hosts:
    - only-my-app.com
    secretName: secret-tls
